// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReactor should initialize 1`] = `
<div>
  <span>
    Not initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
</div>
`;

exports[`createReactor should initialize 2`] = `
<div>
  <span>
    Initialized
  </span>
  <button
    onClick={[Function]}
  >
    Initialize
  </button>
</div>
`;
